# rust-api-contacts

./: .env  Cargo.toml  README.md  contants.http
migrations/2023-11-02-192459_create_contacts/: up.sql
src/: Employee.rs  constants.rs  ctl_contact.rs  db.rs  handlers.rs  main.rs  models.rs  schema.rs
src/services/: contact_service.rs  mod.rs  service_contacts.rs
