[package]
name = "contact_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.51"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.1.3", features = ["postgres", "chrono", "r2d2"] }
r2d2 = "0.8.9"
r2d2-diesel = "1"
dotenv = "0.15"